[gd_scene load_steps=2 format=3 uid="uid://buyg3m00l2a71"]

[ext_resource type="Script" path="res://src/dropdowns_popup.gd" id="1_1ropq"]

[node name="DropdownsPopup" type="Window"]
title = "Characters"
initial_position = 2
size = Vector2i(494, 530)
wrap_controls = true
exclusive = true
script = ExtResource("1_1ropq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Controls" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="AddButton" type="Button" parent="VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
text = "add dd"

[node name="RemoveButton" type="Button" parent="VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "remove dd"

[node name="SaveButton" type="Button" parent="VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "save to global"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/Controls/HBoxContainer2"]
custom_minimum_size = Vector2(244.985, 0)
layout_mode = 2
placeholder_text = "dropdown name"
expand_to_text_length = true

[node name="SaveNameButton" type="Button" parent="VBoxContainer/Controls/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = "save name"

[node name="SaveContentButton" type="Button" parent="VBoxContainer/Controls/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = "save content"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="VBoxContainer/Controls/HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls/HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls/HBoxContainer2/SaveNameButton" to="." method="_on_save_name_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls/HBoxContainer2/SaveContentButton" to="." method="_on_save_content_button_pressed"]
[connection signal="tab_changed" from="VBoxContainer/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="tab_selected" from="VBoxContainer/TabContainer" to="." method="_on_tab_container_tab_selected"]
